Fix text overflow in custom fields table

--- a/packages/js/product-editor/src/components/custom-fields/style.scss
+++ b/packages/js/product-editor/src/components/custom-fields/style.scss
@@ -23,12 +23,13 @@
 		&-datacell {
 			padding-top: $grid-unit-30;
 			padding-bottom: $grid-unit-30;
+			overflow: hidden;
 
 			&:last-child {
 				display: flex;
 				align-items: center;
 				justify-content: flex-end;
-				padding: 0;
+				padding: 0 2px 0 0;
 				gap: $grid-unit;
 			}
 		}
